<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newevent_hint">Event name?</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="newevent_button">Add Event</string>
    <string name="register_button">Register</string>
    <string name="participantspinner_label">Participant?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="newevent_date_label">Date?</string>
    <string name="newevent_date_first">01-01-2015</string>
    <string name="newevent_starttime_label">Start time?</string>
    <string name="newevent_starttime_first">12:00</string>
    <string name="newevent_endtime_label">End time?</string>
    <string name="newevent_endtime_first">1:00</string>
</resources>
