<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.eventregistration.MainActivity"
    tools:showIn="@layout/activity_main">

    //error message
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout0">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=""
            android:id = "@+id/errorText"/>
        </LinearLayout>

    //register
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout1"
        android:layout_below = "@+id/linearLayout0">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/participantspinner_label"/>
            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/participantspinner"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/eventspinner_label"/>
            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/eventspinner"/>
        </LinearLayout>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/register_button"
            android:layout_gravity="end"
            android:onClick="register" />
    </LinearLayout>

    //add participant
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout1">
        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/newparticipant_name"
            android:hint="@string/newparticipant_hint" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/newparticipant_button"
            android:layout_gravity="end"
            android:onClick="addParticipant" />
    </LinearLayout>

    //add event
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/linearLayout2">
        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
            android:id="@+id/test"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/newevent_name"
            android:hint="@string/newevent_hint"
            android:layout_below="@+id/test"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_date_label" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newevent_date_first"
                android:layout_gravity="end"
                android:id="@+id/newevent_date"
                android:onClick="showDatePickerDialog"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_starttime_label" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newevent_starttime_first"
                android:layout_gravity="end"
                android:id="@+id/newevent_starttime"
                android:onClick="showTimePickerDialog"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_endtime_label" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newevent_endtime_first"
                android:layout_gravity="end"
                android:id="@+id/newevent_endtime"
                android:onClick="showTimePickerDialog"/>
        </LinearLayout>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/newevent_button"
            android:layout_gravity="end"
            android:onClick="addEvent" />
    </LinearLayout>
</RelativeLayout>
